# POC-Beta

./: main.ipynb  main.py  pyproject.toml
