[project]
name = "progresschat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.2.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
